@@ -31,6 +31,7 @@ public interface MoreLikeThisParams
   public final static String SIMILARITY_FIELDS     = PREFIX + "fl";
   public final static String MIN_TERM_FREQ         = PREFIX + "mintf";
   public final static String MAX_DOC_FREQ          = PREFIX + "maxdf";
+  public final static String MAX_DOC_FREQ_PCT      = PREFIX + "maxdfpct";
   public final static String MIN_DOC_FREQ          = PREFIX + "mindf";
   public final static String MIN_WORD_LEN          = PREFIX + "minwl";
   public final static String MAX_WORD_LEN          = PREFIX + "maxwl";
